# BVID-FE

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEPLOYMENT_STREAMLIT.md  README.md  STREAMLIT_DEPLOY.md  app.py  conftest.py  mkdocs.yml  pyproject.toml  requirements.txt
.claude/skills/add-failure-criterion/: SKILL.md
.claude/skills/add-material/: SKILL.md
.claude/skills/add-modeling-tier/: SKILL.md
.claude/skills/regenerate-schemas/: SKILL.md
.claude/skills/release/: SKILL.md
.github/: dependabot.yml
.github/workflows/: build.yml  docs.yml  publish.yml  release.yml  tests.yml
docs/: deployment.md  index.md  physics_models.md  python_api.md  quickstart.md
docs/schemas/: analysis_config.json  analysis_results.json
examples/: README.md  quickstart.ipynb
scripts/: generate_schemas.py
src/bvidfe/: __init__.py  _types.py  cli.py
src/bvidfe/analysis/: bvid.py  config.py  fe_mesh.py  fe_tier.py  results.py  semi_analytical.py
src/bvidfe/core/: __init__.py  laminate.py  material.py
src/bvidfe/damage/: __init__.py  io.py  state.py
src/bvidfe/elements/: cohesive.py  hex8.py  hex8i.py
src/bvidfe/failure/: evaluator.py  larc05.py  puck.py  soutis_openhole.py  tsai_wu.py
src/bvidfe/gui/: config_io.py  main_window.py  workers.py
src/bvidfe/gui/panels/: damage_panel.py
src/bvidfe/gui/tabs/: mesh_3d_tab.py  summary_tab.py
src/bvidfe/impact/: __init__.py  mapping.py  olsson.py  shape_templates.py
src/bvidfe/solver/: assembler.py  boundary.py  buckling.py
src/bvidfe/sweep/: parametric_sweep.py
src/bvidfe/viz/: plots_2d.py
tests/: test_cli.py  test_cli_helpers.py  test_cli_reproducibility.py  test_cli_version.py  test_cross_tier_consistency.py  test_edge_cases.py  test_input_sensitivity.py  test_per_ply_thickness.py  test_public_api_exports.py  test_streamlit_app.py  test_validation_smoke.py
tests/analysis/: test_config_validation.py  test_env_resolution.py  test_fe3d_buckling.py  test_fe_mesh.py  test_fe_tier.py  test_fpf_strain_solve_equivalence.py  test_mesh_params_validation.py  test_repr.py  test_semi_analytical.py
tests/core/: test_laminate.py
tests/damage/: test_io.py
tests/elements/: test_cohesive_nan_guard.py  test_hex8.py  test_hex8_voigt_cache.py  test_hex8i_kaa_singular.py
tests/failure/: test_evaluator.py  test_puck.py  test_soutis.py  test_tsai_wu.py
tests/gui/: conftest.py  test_config_io.py  test_live_onset.py  test_summary_notes.py  test_workers.py
tests/impact/: test_mapping.py  test_navier_basis_cache.py  test_olsson.py  test_shape_templates.py  test_shape_templates_vectorized.py
tests/solver/: test_assembler.py  test_boundary.py
tests/sweep/: test_sweep.py
tests/validation/: test_clt_abd_reference.py  test_fe3d_pristine_clt_consistency.py  test_olsson_threshold_reference.py  test_soutis_cai_reference.py  test_whitney_nuismer_limits.py
tests/viz/: conftest.py  test_damage_map_markers.py  test_plots_3d.py
validation/: validate_bvid_public.py
