[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bvidfe"
version = "0.2.0.dev0"
description = "Barely Visible Impact Damage residual-strength analysis for composite laminates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Rani Elhajjar"}]
dependencies = [
    "numpy>=1.24,<3",
    "scipy>=1.10,<2",
    "matplotlib>=3.7,<4",
    "shapely>=2.0,<3",
    "pandas>=2.0,<3",
]

[project.optional-dependencies]
gui = ["PyQt6>=6.5,<7", "pyvista>=0.42,<1", "pyvistaqt>=0.11,<1", "pytest-qt>=4.3,<5"]
dev = ["pytest>=7,<9", "ruff>=0.5,<1", "black>=24,<26"]
all = ["bvidfe[gui,dev]"]

[project.urls]
Homepage = "https://github.com/ranipdx-glitch/BVID-FE"
Issues = "https://github.com/ranipdx-glitch/BVID-FE/issues"
Changelog = "https://github.com/ranipdx-glitch/BVID-FE/blob/main/CHANGELOG.md"
Repository = "https://github.com/ranipdx-glitch/BVID-FE"

[project.scripts]
bvidfe = "bvidfe.cli:main"
bvidfe-gui = "bvidfe.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bvidfe = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
