[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bvidfe"
version = "0.2.0.dev0"
description = "Barely Visible Impact Damage residual-strength analysis for composite laminates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Rani Elhajjar"}]
dependencies = [
    "numpy>=2.1,<3",
    "scipy>=1.14,<2",
    "matplotlib>=3.9,<4",
    "shapely>=2.0,<3",
    "pandas>=2.0,<3",
    "streamlit>=1.32",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = ["pytest>=7,<10", "pytest-cov>=4,<7", "ruff>=0.5,<1", "black>=24,<26", "pre-commit>=3,<5"]
docs = ["mkdocs>=1.6,<2", "mkdocs-material>=9.5,<10"]

[project.urls]
Homepage = "https://github.com/ranipdx-glitch/BVID-FE"
Documentation = "https://ranipdx-glitch.github.io/BVID-FE/"
Repository = "https://github.com/ranipdx-glitch/BVID-FE"
Issues = "https://github.com/ranipdx-glitch/BVID-FE/issues"
Changelog = "https://github.com/ranipdx-glitch/BVID-FE/blob/main/CHANGELOG.md"

[project.scripts]
bvidfe = "bvidfe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bvidfe = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
